2017-10-28  Bruno Haible  <bruno@clisp.org>

	Make (truename "/dev/fd/1") work on Cygwin.
	* pathname.d (my_realpath): Add special treatment of /dev/fd on Cygwin.
	(get_path_info): Optimize number of readlink() calls.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Fix endless loop in TRUENAME on Cygwin (regression from 2017-03-14).
	* pathname.d (get_path_info): When retrying readlink(), choose a buffer
	size that is greater than the previous one.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Don't use symbolic links when building for native Windows.
	* makemake.in (LN_S): For native Windows, ignore the autoconfigured
	value.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Don't assume that (truename (make-stream :output)) works on Windows.
	* makemake.in (check-script): Don't run unportable test on native
	Windows.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Fix 32-bit mingw build failure on 64-bit Cygwin.
	* configure.in: Determine WINDRES variable.
	* makemake.in (clispres.o): Use it.
	* src/configure, gllib/Makefile.in: Regenerated.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Use SINGLEMAP_MEMORY by default on most 64-bit platforms.
	* lispbibl.d: Revise decision whether to use SINGLEMAP_MEMORY: Ignore
	MMAP_FIXED_ADDRESS_HIGHEST_BIT (since the SINGLEMAP_* parameters handle
	this more precisely). Don't disable it on Linux/s390x (where it actually
	works). Don't disable it in MULTITHREAD mode.

2017-10-28  Bruno Haible  <bruno@clisp.org>

	Make SINGLEMAP_MEMORY work reliably on many platforms.
	* Makefile.devel (build-porting*-spvw_pure_blocks): Don't disable
	GENERATIONAL_GC when testing this configuration.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*): Define separately for mips o32
	and mips n32.
	(SINGLEMAP_ADDRESS_BASE, SINGLEMAP_TYPE_MASK, SINGLEMAP_oint_type_shift,
	SINGLEMAP_garcol_bit_o, SINGLEMAP_oint_type_len,
	SINGLEMAP_oint_type_mask, SINGLEMAP_WORKS): Define appropriately for
	each known platform.